# Spincopter2

./: README.md
spincopter_control/: CMakeLists.txt  package.xml
spincopter_control/launch/: spincopter_control.launch
spincopter_control/src/: mav_state_pub.py  spincopter_speed.py
spincopter_description/: CMakeLists.txt  package.xml
spincopter_description/urdf/: firefly.xacro  firefly_base.xacro  multirotor_base.xacro  myrobot.urdf  myrobot.xacro  rotor_wing_base.xacro  spincopter.xacro  spincopter_base.xacro
spincopter_gazebo/: CMakeLists.txt  package.xml
spincopter_gazebo/launch/: mav.launch  myrobot.launch  spawn_mav.launch
spincopter_gazebo/worlds/: myrobot.world
