<?xml version="1.0"?>
<package>
  <name>spincopter_description</name>
  <version>0.0.0</version>
  <description>The spincopter_description package</description>

  <maintainer email="lukamikic14@hotmail.com">Luka Mikic</maintainer>


  <license>TODO</license>

 
  <buildtool_depend>catkin</buildtool_depend>


  <export>


  </export>
</package>
